--- a/angular.json
+++ b/angular.json
@@ -89,7 +89,8 @@
             "tsConfig": "tsconfig.spec.json",
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              "src/assets/*"
             ],
             "styles": [
               "@angular/material/prebuilt-themes/indigo-pink.css",
