--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "build-git":  "ng build --output-path=docs",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
